# imgui_app_template

./: CMakeLists.txt
core/: core.cpp  core.h  imgui_notify.h  style.cpp  style.h
src/: app.cpp  app.h  app_style.h  main.cpp
